@@ -15,6 +15,7 @@ my $builder = Test::Run::Builder->new(
         'Module::Build' => 0.36,
     },
     build_requires => {
+        'List::Util' => 0,
         'Test::More' => 0,
     },
     requires => {
