@@ -13,5 +13,7 @@ t/01_ini.t
 t/10_Table.t
 t/11_Variable_Rule.t
 t/12_column_seps_as_hashes.t
+t/13_callback_rules_with_whitespace.t
 t/pod-coverage.t
 t/pod.t
+META.json
