@@ -3,10 +3,12 @@ abstract: 'Organize Data in Tables'
 author:
   - 'Shlomi Fish <shlomif@cpan.org>'
 build_requires:
+  List::Util: 0
   Test::More: 0
 configure_requires:
   Module::Build: 0.36
-generated_by: 'Module::Build version 0.3617'
+dynamic_config: 1
+generated_by: 'Module::Build version 0.38, CPAN::Meta::Converter version 2.110440'
 keywords:
   - art
   - ascii
@@ -30,6 +32,6 @@ requires:
   warnings: 0
 resources:
   homepage: http://www.shlomifish.org/open-source/projects/docmake/
-  license: http://www.opensource.org/licenses/bsd-license.php
+  license: http://opensource.org/licenses/bsd-license.php
   repository: https://github.com/shlomif/Text-Table
 version: 1.123
